<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tError"
        android:textColorHint="@color/red" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loggin"
            android:textColor="@color/blue"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eLoggin"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/blue"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ePassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RepPassword"
            android:textColor="@color/blue"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eRepPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/blue"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eEmail"
            android:imeOptions="actionSend"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/btDate"
            android:text="@string/fecha"
            android:textSize="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateDisplay"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sexo"
                android:textColor="@color/blue"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/genero">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbFem"
                    android:text="@string/f"
                    android:onClick="onRadioButtonClicked"
                    android:layout_alignParentTop="true"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbMasc"
                    android:text="@string/m"
                    android:onClick="onRadioButtonClicked"
                    android:layout_toRightOf="@+id/rbsuma"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LugarDeNacimiento"
            android:textColor="@color/blue"/>
        <Spinner
            android:id="@+id/spCiudades"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:entries="@array/ciudades_array"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hobbies:"
                android:textColor="@color/blue"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <CheckBox android:id="@+id/chbCaminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caminar"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/chbNadar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nadar"
                android:onClick="onCheckboxClicked"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <CheckBox android:id="@+id/chbLeer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leer"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/chbCine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:onClick="onCheckboxClicked"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar"
        android:textColor="@color/green"
        android:layout_gravity="center"
        android:id="@+id/btAceptar" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tResultado"/>

    </LinearLayout>

</ScrollView>
